hphp/hack/test/typecheck/expression_trees/assign.php.like_types.exp
File "assign.php", line 6, characters 18-55:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 42, characters 41-79:
  But got `dynamic` because it is an unenforceable type
